# fastapi_sqlalchemy

./: README.md
sql_app/: pyproject.toml
sql_app/sql_app/: crud.py  database.py  main.py  models.py  schemas.py  sql_app.db
sql_app/tests/: test_crud_methods.py
