[tool.poetry]
name = "sql-app"
version = "0.1.0"
description = ""
authors = ["BaldPolnareff <baldpolnareff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
pydantic = {extras = ["all"], version = "^2.5.2"}
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
